--- a/index.html
+++ b/index.html
@@ -4,6 +4,62 @@
     </head>
 
     <body>
-        <h1> Hello Class!</h1>
+        <h1> This is my first webpage!!</h1>
+
+        <table border = "3"> 
+            <thead>Table Header col</thead>
+            <tr>
+                <th> First Name </th>
+                <th> Last Name </th>
+                <th> House </th>
+            </tr>
+            <tr>
+                <td> Harry </td>
+                <td> Potter </td>
+                <td> Gryffindor </td>
+            </tr>
+            <tr>
+                <td> Ronald </td>
+                <td> Weasley </td>
+                <td> Gryffindor </td>
+            </tr>
+            <tr>
+                <td> Hermione </td>
+                <td> Granger </td>
+                <td> Gryffindor </td>
+            </tr>
+            <tr>
+                <td> Billious </td>
+                <td> Weasley </td>
+                <td> Gryffindor </td>
+            </tr>
+            <tr>
+                <td> Percy </td>
+                <td> Weasley </td>
+                <td> Gryffindor </td>
+            </tr>
+            <tr>
+                <td> Draco </td>
+                <td> Malfoy </td>
+                <td> Slytherin </td>
+            </tr>
+            <tr>
+                <td> Tom </td>
+                <td> Riddle </td>
+                <td> Slytherin </td>
+            </tr>
+
+            <tr>
+                <td> Cho </td>
+                <td> Chang </td>
+                <td> Ravenclaw </td>
+            </tr>
+            <tr>
+                <td> Cedric </td>
+                <td> Diggory </td>
+                <td> Hufflepuff </td>
+            </tr>
+
+        </table>
     </body>
 </html>
