--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <h1> This is my first webpage!!</h1>
 
         <table border = "3"> 
-            <thead>Table Header col</thead>
+            <thead>Table Header</thead>
             <tr>
                 <th> First Name </th>
                 <th> Last Name </th>
